--- a/Scarb.toml
+++ b/Scarb.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 
 [dependencies]
 starknet = ">=2.0.1"
+openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.7.0" }
 
 [[target.starknet-contract]]
 sierra = true
