--- a/Scarb.toml
+++ b/Scarb.toml
@@ -3,8 +3,9 @@ name = "contracts"
 version = "0.1.0"
 
 [dependencies]
-starknet = ">=2.0.1"
+starknet = "=2.2.0"
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.7.0" }
 
 [[target.starknet-contract]]
 sierra = true
+allowed-libfuncs-list.name = "experimental"
